--- a/Idle Builder/Base.lproj/Main.storyboard
+++ b/Idle Builder/Base.lproj/Main.storyboard
@@ -22,31 +22,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="G9l-Nf-ooR">
-                                <rect key="frame" x="20" y="20" width="627" height="355"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S0f-og-Wqo">
+                                <rect key="frame" x="20" y="120" width="200" height="85"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9JX-BA-8Qu" userLabel="Start Button">
-                                        <rect key="frame" x="0.0" y="0.0" width="627" height="355"/>
-                                        <state key="normal" title="Start"/>
-                                        <connections>
-                                            <segue destination="0hN-dc-UCW" kind="show" id="bSL-Dp-T2q"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="G9l-Nf-ooR">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="85"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9JX-BA-8Qu" userLabel="Start Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
+                                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="PCh-c6-RbQ"/>
+                                                </constraints>
+                                                <state key="normal" title="Start"/>
+                                                <connections>
+                                                    <segue destination="0hN-dc-UCW" kind="show" id="bSL-Dp-T2q"/>
+                                                </connections>
+                                            </button>
+                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="nothing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzb-mf-qzt">
+                                                <rect key="frame" x="0.0" y="30" width="200" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="UFK-Bd-qpB"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rRc-ov-XFX" userLabel="Help Button">
+                                                <rect key="frame" x="0.0" y="55" width="200" height="30"/>
+                                                <color key="backgroundColor" red="0.41176470590000003" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="hs1-cn-rET"/>
+                                                </constraints>
+                                                <state key="normal" title="Help"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="9JX-BA-8Qu" firstAttribute="centerX" secondItem="G9l-Nf-ooR" secondAttribute="centerX" id="LwO-zl-ghx"/>
+                                            <constraint firstItem="rRc-ov-XFX" firstAttribute="top" secondItem="9JX-BA-8Qu" secondAttribute="bottom" constant="25" id="NEX-0h-MHR"/>
+                                            <constraint firstItem="9JX-BA-8Qu" firstAttribute="top" relation="greaterThanOrEqual" secondItem="G9l-Nf-ooR" secondAttribute="top" constant="250" id="OxI-8g-XrG"/>
+                                            <constraint firstItem="9JX-BA-8Qu" firstAttribute="width" secondItem="G9l-Nf-ooR" secondAttribute="width" id="T0V-on-BO3"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="vuK-43-27U"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="G9l-Nf-ooR" secondAttribute="trailing" id="ErZ-zk-Z9A"/>
-                            <constraint firstItem="qHh-Mt-9TT" firstAttribute="top" secondItem="G9l-Nf-ooR" secondAttribute="bottom" id="KOC-vx-zXo"/>
-                            <constraint firstItem="G9l-Nf-ooR" firstAttribute="top" secondItem="8aa-yV-Osq" secondAttribute="bottom" id="f42-9n-xS9"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="G9l-Nf-ooR" secondAttribute="leading" id="jbr-Zq-yob"/>
+                            <constraint firstItem="S0f-og-Wqo" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="CMT-th-b80"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="134" y="7"/>
+            <point key="canvasLocation" x="-251.42428785607197" y="-127.2"/>
         </scene>
         <!--Second View Controller-->
         <scene sceneID="UcE-cq-P1f">
@@ -66,6 +98,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Zh-go-SwO">
                                         <rect key="frame" x="0.0" y="0.0" width="627" height="355"/>
                                         <state key="normal" title="Main Menu"/>
+                                        <connections>
+                                            <segue destination="BV1-FR-VrT" kind="show" id="r7b-2O-D1n"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
